# homework_solutions_for_modern_cpp

./: README.md  install_llvm_toolchain.sh
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_2/task_1/: CMakeLists.txt
homework_2/task_1/src/: task_1.cpp
homework_2/task_2/: CMakeLists.txt
homework_2/task_2/src/: task_2.cpp
homework_3/: CMakeLists.txt
homework_3/api/: html_writer.cpp  image_browser.cpp
homework_3/include/: homework_3.h
homework_3/src/: create_image_browser.cpp
homework_3/web_app/: test.html
homework_4/: CMakeLists.txt
homework_4/include/: homework_4.h  ipb_algorithm.hpp  named_vector.hpp
homework_4/src/: ipb_algorithm.cpp
homework_4/tests/: test_ipb_algorithm.cpp  test_named_vector.cpp
homework_5/: CMakeLists.txt
homework_5/include/: homework_5.h
homework_5/src/: convert_dataset.cpp  convert_freiburg_dataset.cpp
homework_6/: CMakeLists.txt
homework_6/include/: homework_6.h  image.hpp
homework_6/src/: image.cpp  test_specials.cpp
homework_7/: CMakeLists.txt
homework_7/include/: BowDictionary.hpp  convert_dataset.hpp  homework_7.h
homework_7/src/: BowDictionary.cpp  kmeans.cpp  serialize.cpp
homework_7/tests/: test_data.hpp
homework_8/: CMakeLists.txt
homework_8/include/: homework_8.h
homework_8/task_1/: test_stack_limit.sh
homework_8/task_1/src/: stack_limit.cpp
homework_8/task_2/: .clang-tidy  CMakeLists.txt
homework_8/task_2/include/: image.hpp
homework_8/task_2/io_strategies/: io_strategy.hpp  png_io_strategy.cpp  png_io_strategy.hpp  ppm_io_strategy.cpp  ppm_io_strategy.hpp
homework_8/task_2/io_tools/: CMakeLists.txt
homework_8/task_2/src/: image.cpp
homework_9/: CMakeLists.txt
homework_9/include/: BowDictionary.hpp  histogram.hpp  homework_9.h  kmeans.hpp
homework_9/src/: BowDictionary.cpp  histogram.cpp  kmeans.cpp
homework_9/tests/: CMakeLists.txt
project/: CMakeLists.txt
project/api/: html_writer.cpp  html_writer.hpp  image_browser.cpp  image_browser.hpp
project/include/: bovw.hpp  histogram.hpp  main.hpp
project/src/: bovw.cpp  convert_dataset.cpp  histogram.cpp  kmeans.cpp  main.cpp
